2000-12-13  Kriston J. Rehberg  <kriston@aol.com>

	* nssock/Makefile*: now installs The Right Things in The Right
	Places.

	* nsd/Makefile: nsd8x is the default AOLserver now (nsd symlinks
	to nsd8x).

	* nsd/sample-config.tcl: Added some tuning parameters for easy
	reference.

2000-12-12  Kriston J. Rehberg  <kriston@aol.com>

	* nsvhr/nsvhr.c (UDSProxy): More type changes.

	* nslog/nslog.c (Ns_ModuleInit): pointer-to-function casted.

	* nscp/nscp.c (GetLine): buf changed to char *; casted AcceptProc.
	
2000-12-12  Jim Davidson

	* nssock/sock.cpp: Fixed multiple-load problems, added sndbuf,
	rcvbuf, sendwait, and recvwait options. Added configurable backlog
	via Ns_SockListenEx. Fixed compile bugs for ssl. Restructured the
	socket module to wait in server busy situations instead of sending
	the server busy message.  Also, moved the graceful close burden to
	the SockThread from the connection thread.

	* thread/win32.cpp: Moved WinThread allocation to DllMain,
	eliminating GetWinThread function. Also, disabled thread cleanup
	for final thread to avoid any TLS cleanup callbacks attempting to
	invoke code in unloaded libraries like Tcl. Removed call to
	NsInitThread no longer needed. Switched to rolling condition
	broadcast wakeup as in the sproc code.  More fixes for new Thread
	context model.
	
	* thread/tls.c: Changed NsLock API's to return 1/0 instead of
	NS_OK/NS_TIMEOUT and more use of Ns_MasterLock to keep things
	simple.

	* thread/thread.c: Changed thread enum to return Ns_Thread, not
	Ns_Thread pointer which didn't make much sense.  Updated "ns_info
	pools" command to reflect change. Fixed bugs with Ns_ThreadEnum
	and pool counters. Update of the Ns_Pool API to support more stats
	gathering available via new Ns_PoolStats API. Remove Thread->etime
	and NsPool API's. Moved sprintf of default thread name from
	NsThreadMain to NsInitThread under protection of threads
	lock. Added comment for NsInitThread. More fixes for new Thread